CSS has been added to fix ipad alignment issue.

--- a/src/main/java/org/ednovo/gooru/client/mvp/play/resource/style/playertablet.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/play/resource/style/playertablet.css
@@ -6,19 +6,30 @@ html{
 }
 
 .container{
-	width:760px;
+	width:960px;
  	margin-left: auto;
     margin-right: auto;
-    padding-left: 15px;
-    padding-right: 15px;
+   /*  padding-left: 15px;
+    padding-right: 15px; */
 
 }
 .summaryContainer{
-	width:760px;
+	width:960px;
 	margin-left: auto;
   	margin-right: auto;
-   	padding-left: 15px;
-   	padding-right: 15px;
+   /* 	padding-left: 15px;
+   	padding-right: 15px; */
+}
+.collectionPlayerContainer{
+	width: 960px;
+	margin: 0 auto;
+	height: 95%;
+}
+.blocksmall{
+	width: 960px;
+	box-sizing: border-box;
+	background: #fff;
+	border-bottom: 1px solid #ddd;
 }
 .whitebg{}
 .navigationWrapper{}
